--- a/src/index.html
+++ b/src/index.html
@@ -7,16 +7,16 @@
   <body>
     <div class="container">
       <div class="content">
-        <form>
-          <label>Quantos cilindros?</label>
-          <input type="text" name="cylinder">
-          <label>Qual a posição inicial do braço do disco?</label>
-          <input type="text" name="armInitialPosition">
-          <label>Qual o tempo de seek para o cilindro adjacente?</label>
-          <input type="text" name="seekTime">
-          <label>Arquivo com as requisições de acesso a disco:</label>
-          <input type="file" name="requestsFile">
-          <input type="submit" value="LoadValues">
+        <form class="inputForm">
+          <label class="inputFormItem">Quantos cilindros?</label>
+          <input class="inputFormItem" type="text" name="cylinder">
+          <label class="inputFormItem">Qual a posição inicial do braço do disco?</label>
+          <input class="inputFormItem" type="text" name="armInitialPosition">
+          <label class="inputFormItem">Qual o tempo de seek para o cilindro adjacente?</label>
+          <input class="inputFormItem" type="text" name="seekTime">
+          <label class="inputFormItem">Arquivo com as requisições de acesso a disco:</label>
+          <input class="inputFormItem" type="file" name="requestsFile">
+          <input class="submitInputForm" type="submit" value="LoadValues">
         </form>
       </div>
     </div>
