refactor (style): especialize submit input

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
           <input class="inputFormItem" type="text" name="seekTime">
           <label class="inputFormItem">Arquivo com as requisições de acesso a disco:</label>
           <input class="inputFormItem" type="file" name="requestsFile">
-          <input class="submitInputForm" type="submit" value="LoadValues">
+          <input class="inputFormItem" id="submitInputForm" type="submit" value="LoadValues">
         </form>
       </div>
     </div>
