feat (template): create output container

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="container">
       <div class="content">
-        <form class="inputForm">
+        <form class="inputAndOutputForm">
           <label class="inputFormItem">Quantos cilindros?</label>
           <input class="inputFormItem" type="text" name="cylinder">
           <label class="inputFormItem">Qual a posição inicial do braço do disco?</label>
@@ -20,5 +20,20 @@
         </form>
       </div>
     </div>
+    <div class="container">
+        <div class="content">
+          <form class="inputAndOutputForm">
+            <label class="inputFormItem">Deslocamentos:</label>
+            <input class="inputFormItem" type="text" name="displacement">
+            <label class="inputFormItem">Média de Deslocamentos:</label>
+            <input class="inputFormItem" type="text" name="avarageDisplacement">
+            <label class="inputFormItem">Variância:</label>
+            <input class="inputFormItem" type="text" name="variance">
+            <label class="inputFormItem">Desvio Padrão:</label>
+            <input class="inputFormItem" type="text" name="standardDeviation">
+            <div id="sortedOutputFile"></div>
+          </form>
+        </div>
+      </div>
   </body>
 </html>
