feat (algorithms): create algorithms buttons

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,12 @@
           <input class="inputFormItem" type="text" name="seekTime">
           <label class="inputFormItem">Arquivo com as requisições de acesso a disco:</label>
           <input class="inputFormItem" type="file" name="requestsFile">
+          <div class="standardFormItem">
+            <button class="managerAlgorithmsButton">FIFO</button>
+            <button class="managerAlgorithmsButton">SSF</button>
+            <button class="managerAlgorithmsButton">SCAN</button>
+            <button class="managerAlgorithmsButton">C-SCAN</button>
+          </div>
           <input class="inputFormItem" id="submitInputForm" type="submit" value="LoadValues">
         </form>
       </div>
