feat (interface): implement custom behavior for algorithms buttons

--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,10 @@
           <label class="inputFormItem">Arquivo com as requisições de acesso a disco:</label>
           <input class="inputFormItem" type="file" name="requestsFile">
           <div class="standardFormItem">
-            <button class="managerAlgorithmsButton" onclick="fifo()">FIFO</button>
-            <button class="managerAlgorithmsButton" onclick="ssf()">SSF</button>
-            <button class="managerAlgorithmsButton" onclick="scan()">SCAN</button>
-            <button class="managerAlgorithmsButton" onclick="cscan()">C-SCAN</button>
+            <button class="managerAlgorithmsButton" type="button" onclick="fifo()">FIFO</button>
+            <button class="managerAlgorithmsButton" type="button" onclick="ssf()">SSF</button>
+            <button class="managerAlgorithmsButton" type="button" onclick="scan()">SCAN</button>
+            <button class="managerAlgorithmsButton" type="button" onclick="cscan()">C-SCAN</button>
           </div>
         </form>
       </div>
