feat (interface): centralize output content block

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
       </div>
     </div>
     <div class="container">
-        <div class="content">
+        <div class="content" id="inputForm">
           <h2 class="outputInfo">Deslocamentos:</h2>
           <p class="outputInfo" id="outputDisplacement"></p>
           <h2 class="outputInfo">Média de Deslocamentos:</h2>
