feat (interface): update info distribution to row direction

--- a/src/index.html
+++ b/src/index.html
@@ -26,18 +26,20 @@
       </div>
     </div>
     <div class="container">
-        <div class="content" id="inputForm">
-          <h2 class="outputInfo">Deslocamentos:</h2>
-          <p class="outputInfo" id="outputDisplacement"></p>
-          <h2 class="outputInfo">Média de Deslocamentos:</h2>
-          <p class="outputInfo" id="outputAvarageDisplacement"></p>
-          <h2 class="outputInfo">Variância:</h2>
-          <p class="outputInfo" id="outputVariance"></p>
-          <h2 class="outputInfo">Desvio Padrão:</h2>
-          <p class="outputInfo" id="outputStandardDeviation"></p>
-          <div id="sortedOutputFile"></div>
-        </div>
+      <div class="content" id="outputContent">
+        <h3 class="outputInfo">Deslocamentos:</h2>
+        <p class="outputInfo" id="outputDisplacement"></p>
+        <h3 class="outputInfo">Média de Deslocamentos:</h2>
+        <p class="outputInfo" id="outputAvarageDisplacement"></p>
+        <h3 class="outputInfo">Variância:</h2>
+        <p class="outputInfo" id="outputVariance"></p>
+        <h3 class="outputInfo">Desvio Padrão:</h2>
+        <p class="outputInfo" id="outputStandardDeviation"></p>
       </div>
-      <script src="main.js"></script>
+      <div class="content" id="outputContent">
+        <div id="sortedOutputFile"></div>
+      </div>
+    </div>
+    <script src="main.js"></script>
   </body>
 </html>
