feat (output): add avarage time placeholders and calculators

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,15 @@
         <h3 class="outputInfo">Desvio Padrão:</h2>
         <p class="outputInfo" id="outputStandardDeviation"></p>
       </div>
+      <div class="container">
+        <div class="content" id="outputContent">
+          <h3 class="outputInfo">Tempo Médio dos Deslocamentos:</h2>
+          <p class="outputInfo" id="outputAvarageTimeDisplacement"></p>
+          <h3 class="outputInfo">Variancia do Tempo Médio dos Deslocamentos:</h2>
+          <p class="outputInfo" id="outputAvarageTimeVariance"></p>
+          <h3 class="outputInfo">Desvio Padrão do Tempo Médio dos Descolamentos:</h2>
+          <p class="outputInfo" id="outputAvarageTimeStandardDeviation"></p>
+        </div>
       <div class="content" id="outputContent">
         <div id="sortedOutputFile"></div>
       </div>
